--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +57,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/images/flutter_thumbnail.png
+    - assets/images/
+    - assets/lotties/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
