--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   lottie: ^3.3.1
   shared_preferences: ^2.1.1
   flutter_launcher_icons: ^0.14.3
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
